--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
   <div class="container">
     <h1>🎉 Time’s Up!</h1>
     <p>Your Score: <span id="finalScore">0</span></p>
-    <a href="game.html" class="btn">Play Again</a>
+    <a href="index.html" class="btn">Go to Home</a>
   </div>
   <script>
     const params = new URLSearchParams(window.location.search);
