--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Farm Color Spotter</title>
+  <title>Spotter Rush</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>🎮 Welcome to the Farm Spotter Game!</h1>
+    <h1>🎮 Welcome to Spotter Rush!</h1>
     <a href="game.html" class="btn">Play Game</a>
   </div>
 </body>
