--- a/game.html
+++ b/game.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Farm Spotter - Game</title>
+  <title>Spotter Rush - Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>⏱️ Spot the Odd Box</h1>
-    <p>Time Left: <span id="timer">30</span>s</p>
+    <h1>⏱️ Spot the Orange!</h1>
+    <p>Time Left: <span id="timer">60</span>s</p>
     <p>Score: <span id="score">0</span></p>
     <button id="startBtn" class="btn">Start Game</button>
     <div id="grid" class="grid" style="display: none;"></div>
