--- a/game.html
+++ b/game.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Spotter Rush - Game</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Play - Spotter Rush</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>⏱️ Spot the Orange!</h1>
-    <p>Time Left: <span id="timer">60</span>s</p>
-    <p>Score: <span id="score">0</span></p>
+    <h1>🟠 Spot the Orange!</h1>
+    <p>Click all 7 orange tiles before the 5-second timer runs out.</p>
+    <div id="timer">⏱️ 60s</div>
+    <div id="score">Score: 0</div>
     <button id="startBtn" class="btn">Start Game</button>
-    <div id="grid" class="grid" style="display: none;"></div>
+    <div id="grid" class="grid"></div>
   </div>
   <script src="script.js"></script>
 </body>
