--- a/game.html
+++ b/game.html
@@ -2,18 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Play - Spotter Rush</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spotter Rush - Play</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>🟠 Spot the Orange!</h1>
-    <p>Click all 7 orange tiles before the 5-second timer runs out.</p>
-    <div id="timer">⏱️ 60s</div>
-    <div id="score">Score: 0</div>
+  <div class="game-container">
+    <h2>Spotter Rush</h2>
+    <div id="info">
+      <div>Time Left: <span id="timer">60</span>s</div>
+      <div>Score: <span id="score">0</span></div>
+    </div>
     <button id="startBtn" class="btn">Start Game</button>
-    <div id="grid" class="grid"></div>
+    <div id="grid" class="grid hidden"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
