--- a/result.html
+++ b/result.html
@@ -4,19 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spotter Rush - Result</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.3em;
+      margin-bottom: 30px;
+    }
+
+    .btn {
+      background-color: #ff6666;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 1em;
+      border-radius: 6px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #ff4d4d;
+    }
+  </style>
 </head>
 <body>
-  <div class="result-container">
-    <h2>🎉 Game Over!</h2>
-    <p>Your Score: <span id="finalScore">0</span></p>
-    <a href="index.html" class="btn">Play Again</a>
-  </div>
+  <h1>🎉 Game Over!</h1>
+  <p id="scoreText">Your Score: 0</p>
+  <a class="btn" href="game.html">Play Again</a>
 
   <script>
+    // Get score from query param
     const params = new URLSearchParams(window.location.search);
     const score = params.get("score") || 0;
-    document.getElementById("finalScore").textContent = score;
+    document.getElementById("scoreText").textContent = `Your Score: ${score}`;
   </script>
 </body>
 </html>
