--- a/game.html
+++ b/game.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spotter Rush - Play</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Play - Spotter Rush</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="game">
   <div class="game-container">
     <h2>Spotter Rush</h2>
     <div id="info">
@@ -16,7 +16,6 @@
     <button id="startBtn" class="btn">Start Game</button>
     <div id="grid" class="grid hidden"></div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
